<resources>
    <string name="app_name">Resell</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="UserRegistration">User Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="Gender">Gender</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_edit_profile">editProfile</string>
    <string name="edit">Edit</string>
    <string name="signOut">Sign out</string>
    <string name="profile">profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="mNumber">Mobile number</string>
    <string name="country">Country</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="add_item">Add item</string>
    <string name="price">Price:</string>
    <string name="description">Description</string>
    <string name="size">size</string>
    <string name="title_activity_item_details">itemDetails</string>
    <string name="item_image">Item image</string>
    <string name="action_share">Share</string>
    <string name="title_activity_my_items">myItems</string>
    <string name="delete">delete</string>
    <string name="items">items</string>
    <string name="title_widget">Resell</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="myitems">My Items</string>
    <string name="imageTransition">imageTransitionName</string>
    <string name="title_widget_detail">Resell</string>
    <string name="empty_resell_list">empty list</string>
    <string name="edit_profile">edit profile</string>
    <string name="add_item_fab">add item</string>
    <string name="edit_profile_fab">edit profile</string>
    <string name="upload_image">upload image</string>
    <string name="profile_image">profile image</string>
    <string name="save">save</string>
    <string name="Email">Email</string>
    <string name="user_name">user name</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="signup_navigation">Don\'t have an account? Sign-up Here</string>
    <string name="Registration_wait">Registering Please Wait.....</string>
    <string name="Registration_success">Registration successful</string>
    <string name="acount_exists">Account already exists</string>
    <string name="acount_info">accountinfo</string>
    <string name="Registration_item_wait">Registering Please Wait....</string>
    <string name="item_saved">Item saved</string>
    <string name="no_internet_connection">Please check your Internet connection !</string>
    <string name="Loading">Loading please wait</string>
    <string name="upload_image_fail">Can not upload your image</string>
    <string name="enter_price">please enter price</string>
    <string name="enter_size">please enter size</string>
    <string name="select_country">Select Country</string>
    <string name="enter_gender">Please enter your gender</string>
    <string name="enter_age">Please enter your age</string>
    <string name="enter_mobile">Please enter your mobile number</string>
    <string name="enter_country">Please enter your country</string>
    <string name="loading">loading.....</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="wrong_user_pass">wrong username or password</string>
    <string name="delete_item">Item is deleted</string>
    <string name="updating">Updating Please Wait.....</string>
    <string name="enter_name">Please enter your name</string>


    <!-- Title for the  Items preference  -->
    <string name="pref_Location_label">Items shown Location</string>
    <!-- Key name for items location preference in SharedPreferences  -->
    <string name="pref_Location_key" translatable="false">location</string>

    <!-- Value in SharedPreferences for my country only items option -->
    <string name="pref_location_my_country" translatable="false">my country only</string>
    <!-- Value in SharedPreferences for world wide items  option used also as default value -->
    <string name="pref_location_all_countries" translatable="false">world Wide</string>


    <string name="pref_location_label_all_countries">World Wide</string>
    <string name="pref_location_label_my_country">My country only</string>
    <string name="title_activity_settings">SettingsActivity</string>


</resources>
