<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"

    android:foreground="?selectableItemBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_layout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/grid_item_imageview"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_location_searching_black_24dp"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/imageTransition" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price"
            android:minHeight="50dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:textColor="@color/DarkBlue"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>
