<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:foreground="?selectableItemBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_layout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_imageview"
                android:contentDescription="@string/item_image"
                android:src="@drawable/ic_location_searching_black_24dp"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:id="@+id/price"
                    android:minHeight="50dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:textColor="@color/DarkBlue"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:id="@+id/size"
                    android:minHeight="50dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:textColor="@color/DarkBlue"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:text="@string/description"
                    android:id="@+id/description"
                    android:minHeight="50dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:textColor="@color/DarkBlue"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:maxLines="4"
                    android:ellipsize="end" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            android:id="@+id/delete"
            android:layout_gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/delete" />
    </FrameLayout>


</android.support.v7.widget.CardView>
