<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemDetailsFragment"
    tools:showIn="@layout/activity_item_details"
    android:transitionGroup="true">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/calendar"
            android:transitionName="@string/imageTransition" />

        <LinearLayout
            android:layout_marginTop="-60dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:elevation="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/account" />
        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="Viral Android"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="57dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="2dp"
                android:padding="20dp"
                android:text="@string/price" />

            <TextView
                android:id="@id/size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="2dp"
                android:padding="20dp"
                android:text="@string/size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="2dp"
                android:padding="20dp"
                android:text="@string/description" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
