<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.resell.AddItemFragment"
    tools:showIn="@layout/activity_add_item"
    android:background="@color/ColorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/buttonChoose"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/camera"
                app:border_color="#E82125"
                android:contentDescription="@string/upload_image"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="120dp" />
        </LinearLayout>

        <TableLayout
            android:paddingLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_marginBottom="16dp"
                android:weightSum="4">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/price"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/priceLayout"
                    android:layout_width="0dp"
                    android:layout_weight="2.5">

                    <EditText
                        android:maxLength="8"
                        android:textSize="14sp"
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:textColorHint="@color/hintColor"

                        />
                </android.support.design.widget.TextInputLayout>
            </TableRow>


            <TableRow
                android:layout_marginBottom="16dp"
                android:weightSum="4">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/size"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sizeLayout"
                    android:layout_width="0dp"
                    android:layout_weight="2.5">

                    <EditText
                        android:maxLength="4"
                        android:textSize="14sp"
                        android:id="@+id/size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/size"
                        android:digits="0,1,2,3,4,5,6,7,8,9,*,,XSLMxslm"
                        android:textColorHint="@color/hintColor" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_marginBottom="16dp"
                android:weightSum="4">

                <TextView
                    android:textSize="16sp"
                    android:text="@string/description"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descriptionLayout"
                    android:layout_width="0dp"
                    android:layout_weight="2.5">

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/description"
                        android:hint="@string/description"
                        android:textColorHint="@color/hintColor"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:minLines="1"
                        android:gravity="top|left"
                        android:maxLines="4"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:scrollbars="vertical" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>
        </TableLayout>

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/post_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/add_item"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/MyButton" />
    </LinearLayout>
</ScrollView>
